[package]
name = "die_ursuppe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_egui = { git = "https://github.com/mvlabat/bevy_egui", rev = "c906611" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"