[package]
name = "die_ursuppe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_egui = "0.17"
rand = "0.8"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1